# porydaw

./: .gitignore  .gitmodules  BACKLOG.md  CMakeLists.txt  README.md  SPEC.md
.claude/skills/verify/: SKILL.md
.github/workflows/: build.yml
docs/sample-studio/: CONTEXT.md  DSP.md  FORMATS.md  PLAN.md
docs/sample-studio/tools/: analyze_samples.py  make_fixtures.py
resources/: fonts.qrc
src/: editcheck.cpp  eventviewcheck.cpp  exportcheck.cpp  fontcheck.cpp  ignorecheck.cpp  loopcheck.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mkcheck.cpp  onboardcheck.cpp  polycheck.cpp  primecheck.cpp  rollcheck.cpp  rollcheckplayhead.cpp  rollcheckplayhead.h  roundtrip.cpp  samplecheck.cpp  samplecheck_fixtures.h  savecheck.cpp  sessioncheck.cpp  songsession.h  tabcheck.cpp  transportcheck.cpp  vgcheck.cpp  vgsavecheck.cpp  viewcheck.cpp
src/audio/: audioengine.cpp  audioengine.h  auditionslots.cpp  auditionslots.h  miniaudio_impl.c  sampledata.h  sampledoc.cpp  sampledoc.h  sampledsp.cpp  sampledsp.h  sampleimport.cpp  sampleimport.h  samplewav.cpp  samplewav.h  sf2reader.cpp  sf2reader.h  stb_vorbis_impl.c  wavexport.cpp  wavexport.h
src/core/: mid2agbtables.cpp  mid2agbtables.h  midiimport.cpp  midiimport.h  miditimeline.cpp  miditimeline.h  smf.cpp  smf.h  songdocument.cpp  songdocument.h  timelineplayer.cpp  timelineplayer.h
src/project/: decompproject.cpp  decompproject.h  samplereg.cpp  samplereg.h  sidecar.cpp  sidecar.h  songregistry.cpp  songregistry.h  songsmk.cpp  songsmk.h  voicegroupsource.cpp  voicegroupsource.h
src/ui/: applicationstartup.cpp  applicationstartup.h  enginesettingsdialog.cpp  enginesettingsdialog.h  eventlistview.cpp  eventlistview.h  layout.cpp  layout.h  m4asemantics.cpp  m4asemantics.h  newsongwizard.cpp  newsongwizard.h  playheadoverlay.cpp  playheadoverlay.h  polyphonypanel.cpp  polyphonypanel.h  registrationdialog.cpp  registrationdialog.h  sampleeditordialog.cpp  sampleeditordialog.h  samplepicker.cpp  samplepicker.h  sf2zonepicker.cpp  sf2zonepicker.h  songlistpanel.cpp  songlistpanel.h  songsettingsdialog.cpp  songsettingsdialog.h  songview.cpp  songview.h  songviewmodel.cpp  songviewmodel.h  typography.cpp  typography.h  viewsidecar.cpp  viewsidecar.h  voicegroupbrowser.cpp  voicegroupbrowser.h  waveformview.cpp  waveformview.h
src/ui/theme/: color_math.cpp  color_math.h  oklchpicker.cpp  oklchpicker.h  presetcolors.h  theme.h  theme_roles.h  themecheck.cpp  themecheck.h  themechecks_main.cpp  themecontroller.cpp  themecontroller.h  themedialog.cpp  themedialog.h  themeresolver.cpp  themeresolver.h  themeruntime.cpp  themeruntime.h  trackidentitycolors.cpp  trackidentitycolors.h
tools/: porydaw_render_cli.cpp  run_checks.sh
